fix: snezka is not visible

--- a/style.css
+++ b/style.css
@@ -102,12 +102,12 @@ body:has([data-product-guide-index]) #sidebar a.nav-anchor[href='/'] svg {
   flex-direction: column !important;
   justify-content: space-between !important;
   min-height: 260px;
-  background: url('/images/zaciname-background.jpg') center / cover no-repeat !important;
+  background: url('/docs/images/zaciname-background.jpg') center / cover no-repeat !important;
   border: none !important;
   box-shadow: none !important;
   color: white !important;
   .dark & {
-    background-image: url('/images/zaciname-background.jpg') !important;
+    background-image: url('/docs/images/zaciname-background.jpg') !important;
   }
 }
 
